Fix graphs overlapping text on small screens

--- a/css/d4k-status.css
+++ b/css/d4k-status.css
@@ -100,4 +100,12 @@ p a:focus,
 p a:active {
   text-decoration: none;
   }
-  
+
+@media only screen and (max-width: 576px) {
+  article.graph div {
+    width: 75%;
+  } 
+  article.graph {
+    background-size: 25%;
+  }
+}
